# website

./: .gitignore  .gitmodules  LICENSE  README.md  discord.ahk  hugo.toml  hugo.yaml  hugo.yml  index.js  package-lock.json  package.json
.github/workflows/: deploy.yml
archetypes/: post.md
assets/css/extended/: custom_fonts.css
assets/js/: track.js
client/: index.css  index.html  index.js  log.csv  package.json  svelte.config.js
client/mobile/: index.css  index.html
client/src/routes/: +page.svelte  (+1 more)
content/: _index.md  about.md
content/post/: my-first-post.md
content/posts/: ChatGPT_Detox.md  FM Demod.md  first.md  my-first-post.md
layouts/_default/: list.html  single.html  terms.html
layouts/_internal/: google_analytics.html
layouts/partials/: extend_head.html  foot_custom.html  footer.html  math.html
old/client-old/: index.js
old/src/: server.js
public/: 404.html  index.html  index.xml  original.min.css  robots.txt  sitemap.xml
public/_about/: index.html
public/about/: index.html
public/categories/: index.html  index.xml
public/css/: fonts.css  style.css
public/post/: index.html  index.xml
public/posts/: index.html  index.xml
public/tags/: index.html  index.xml
schostclient/: CMakeLists.txt
schostclient/src/: main.cpp  stb_image_write.hpp
src/: App.vue  index.js  logger.js  main.js  server.js  servicehandle.js  website.js
src/assets/: base.css  main.css
src/middlewares/: authenticator.js  authenticatordatabase.js
src/services/: config.json  index.js
static/css/: style.css
storage/schost/: storageHelper.js
(+80 files in other folders)
